--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,31 @@
 cmake_minimum_required(VERSION 3.10)
-project(hello_opengl CXX)
+project(learnOpenGL)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# --- GLAD library ---
-add_library(glad_obj OBJECT include/glad/glad.c)
-target_include_directories(glad_obj PRIVATE ${CMAKE_SOURCE_DIR}/include)
+# Output executable to project root
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
 
-add_library(glad STATIC $<TARGET_OBJECTS:glad_obj>)
-add_dependencies(glad glad_obj)
-set_target_properties(glad PROPERTIES LINKER_LANGUAGE C)
+# --- GLAD ---
+add_library(glad STATIC include/glad/glad.c)
+target_include_directories(glad PUBLIC include)
 
-# --- Main program ---
-add_executable(hello
+# --- Executable sources ---
+add_executable(learnOpenGL
     main.cpp
     include/shaders/shader.cpp
     include/camera/camera.cpp
 )
 
-target_include_directories(hello PRIVATE
-    ${CMAKE_SOURCE_DIR}/include
-    ${CMAKE_SOURCE_DIR}/libs/glfw/include
+target_include_directories(learnOpenGL PRIVATE
+    include
+    libs/glfw/include
 )
 
-# --- Link order ---
+# --- Link libraries ---
 if (WIN32)
-    target_link_libraries(hello PRIVATE
+    target_link_libraries(learnOpenGL PRIVATE
         glad
         ${CMAKE_SOURCE_DIR}/libs/glfw/lib-mingw-w64/libglfw3.a
         opengl32
@@ -34,14 +33,5 @@ if (WIN32)
     )
 else()
     find_package(OpenGL REQUIRED)
-    target_link_libraries(hello PRIVATE
-        glad
-        glfw
-        ${OPENGL_LIBRARIES}
-        m
-        dl
-        pthread
-    )
+    target_link_libraries(learnOpenGL PRIVATE glad glfw ${OPENGL_gl_LIBRARY} dl)
 endif()
-
-add_dependencies(hello glad)
