--- a/imgui.ini
+++ b/imgui.ini
@@ -1,12 +1,12 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=60,-18
 Size=400,400
 
 [Window][OpenGL UI]
-Pos=6,4
+Pos=44,19
 Size=448,714
 
 [Window][Scene Tree]
-Pos=1623,18
-Size=275,171
+Pos=1382,20
+Size=354,514
 
